# china-real-state-regression-kaggle

./: 1_analise_exploratoria.ipynb  2_preprocess.ipynb  3_training_v1.ipynb  3_training_v2.ipynb  3_training_v3.ipynb  404.html  README.md  feature_cols_v3.joblib  index.html  metricas_v1.json  metricas_v2.json  metricas_v3.json  metricas_v3_resumo.txt  mkdocs.yml  mlp_model_v3.joblib  pyproject.toml
.github/workflows/: main.yaml
DESAFIOS/: index.html
EXPERIMENTOS/: index.html
MODELOS/: index.html
PROJECT_CHECKLIST/: index.html
RELATORIO/: index.html
analysis/: index.html
comparison/: index.html
conclusion/: index.html
dataset/eda/: index.html
dataset/overview/: index.html
docs/: DESAFIOS.md  EXPERIMENTOS.md  MODELOS.md  PROJECT_CHECKLIST.md  README.md  RELATORIO.md  analysis.md  comparison.md  conclusion.md  index.md  metrics.md  overview.md  project.md  references.md  workflow.md
docs/dataset/: eda.md  overview.md
docs/evaluation/: comparison.md  metrics.md  results.md
docs/training/: overview.md  v1.md  v2.md  v3.md
evaluation/comparison/: index.html
evaluation/metrics/: index.html
evaluation/results/: index.html
metrics/: index.html
overview/: index.html
project/: index.html
references/: index.html
search/: search_index.json
training/overview/: index.html
training/v1/: index.html
training/v2/: index.html
training/v3/: index.html
workflow/: index.html
