[project]
name = "china-real-state-regression-kaggle"
version = "0.1.0"
description = "Projeto de regressão para a competição Kaggle de previsão de demanda imobiliária na China."
authors = [{ name = "Seu Nome", email = "seu@email.com" }]
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jupyter",
    "nbconvert",
    "ipykernel",
    "scipy",
    "joblib",
]

[project.optional-dependencies]
docs = [
    "mkdocs",
    "mkdocs-material",
    "pymdown-extensions",
]

# Grupo "docs-all" para o CI, conforme seu main.yaml
docs-all = [
    "china-real-state-regression-kaggle[docs]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "*.ipynb",
]
